# caldo-calibration

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx  Calibrate.tsx  Connect.tsx  LoadCell.tsx  Motor.tsx  Read.tsx  plot.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backend.rs  calibrate.rs  calibration_data.rs  data.rs  dispenser.rs  errors.rs  lib.rs  main.rs  scale.rs  state.rs
src/utilities/: MotorControls.tsx  utils.ts
