[package]
name = "caldo-calibration"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "caldo_calibration_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
#control-components = {git = "https://github.com/Caldo-Restaurant-Technologies/control-components.git"}
libra = {git = "https://github.com/Caldo-Restaurant-Technologies/libra.git"}
node-diagnostics = {git = "https://github.com/rileyhernandez/node-diagnostics.git"}
clear-core = {git = "https://github.com/Caldo-Restaurant-Technologies/clear-core-client.git"}
tokio = { version = "~1.38" }
phidget = "0.2.0"
http = "1.3.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
log = "0.4.27"
