[package]
name = "caldo-calibration"
version = "0.1.0"
description = "Caldo Node Calibration App"
authors = ["Riley Hernandez"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "caldo_calibration_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
libra = {git = "https://github.com/Caldo-Restaurant-Technologies/libra.git"}
node-diagnostics = {git = "https://github.com/rileyhernandez/node-diagnostics.git"}
reqwest = { version = "0.12.15" }
log = "0.4.27"
async-clear-core = { git = "https://github.com/Caldo-Restaurant-Technologies/async-clear-core-client.git", version = "0.1.0" }
anyhow = "1.0.98"
tokio = "1.45.0"
control-components = {git = "https://github.com/Caldo-Restaurant-Technologies/control-components.git"}
